Modificacion de alumnos y estudiantes terminado

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -75,7 +75,7 @@
 					</a>
 					<ul class="list-unstyled full-box">
 						<li>
-							<a href="/Alumnos"><i class="zmdi zmdi-account zmdi-hc-fw"></i> Estudiantes</a>
+							<a href="/alumnos"><i class="zmdi zmdi-account zmdi-hc-fw"></i> Estudiantes</a>
 						</li>
 						<li>
 							<a href="/profesores"><i class="zmdi zmdi-male-alt zmdi-hc-fw"></i>Profesores</a>
@@ -102,7 +102,7 @@
 							<a href="repetidores.html"><i class="zmdi zmdi-face zmdi-hc-fw"></i>Alumnos repetidores</a>
 						</li>
 						<li>
-							<a href="alumnofct.html"><i class="zmdi zmdi-face zmdi-hc-fw"></i>Alumnos en FCT</a>
+							<a href="/alumnos_FCT"><i class="zmdi zmdi-face zmdi-hc-fw"></i>Alumnos en FCT</a>
 						</li>
 					</ul>
 					
@@ -206,13 +206,13 @@
 		</div>
 	</div>
 	<!--====== Scripts -->
-	<script src="./js/jquery-3.1.1.min.js"></script>
-	<script src="./js/sweetalert2.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="./js/material.min.js"></script>
-	<script src="./js/ripples.min.js"></script>
-	<script src="./js/jquery.mCustomScrollbar.concat.min.js"></script>
-	<script src="./js/main.js"></script>
+	<script src="/js/jquery-3.1.1.min.js"></script>
+	<script src="/js/sweetalert2.min.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/material.min.js"></script>
+	<script src="/js/ripples.min.js"></script>
+	<script src="/js/jquery.mCustomScrollbar.concat.min.js"></script>
+	<script src="/js/main.js"></script>
 	<script>
 		$.material.init();
 	</script>
