--- a/src/views/crear_profesor.hbs
+++ b/src/views/crear_profesor.hbs
@@ -9,7 +9,7 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<ul class="nav nav-tabs" style="margin-bottom: 15px;">
-				<li class="active"><a href="#new" data-toggle="tab">Nuevo</a></li>
+				<li class="active"><a href="/crear_profesor" data-toggle="tab">Nuevo</a></li>
 				<li><a href="/profesores">Listado de Profesores</a></li>
 			</ul>
 			<div id="myTabContent" class="tab-content">
@@ -51,15 +51,14 @@
 										<textarea class="form-control" name="phone2" ></textarea>
 									</div>
 									<div class="form-group">
-										<label class="control-label">Tutor</label>
-										<select class="form-control" name="tutor" id="tutor"  >
-										   <option value="si">si</option>
-										   <option value="no">no</option>
-										</select>
+										<label class="control-label">¿ Este profesor es tutor ?</label>
+										<input name="tutor" id="tutor" type="checkbox" value="true"> No
+										<input name="tutor" id="tutor" type="checkbox" value="false" checked> Si
 									</div>
 									<div class="form-group">
 										<label class="control-label">¿De que tipo de etapa es tutor?</label>
-										<select class="form-control" name="tipo_etapa" id="tipo_etapa"  >
+										<select class="form-control" name="tipo_etapa" id="tipo_etapa">
+									 	   <option disabled selected>-----</option>
 										   <option value="FP">FP</option>
 										   <option value="Etapa">ESO o Bachiller</option>
 										</select>
@@ -198,11 +197,21 @@
 
 (async () => {
 
+			const tutor_el = document.querySelector("#tutor")
 			const tipo_etapa_el = document.querySelector("#tipo_etapa");
             const tutor_etapa_el = document.querySelector("#tutor_etapa");
             const tutor_curso_el = document.querySelector("#tutor_curso");
 			const tutor_ciclo = document.querySelector("#tutor_ciclo");
 
+			tutor_el.addEventListener("change", () => {
+  			if(tutor_el.checked === true) {
+    			tipo_etapa_el.setAttribute('disabled', '');
+				tutor_etapa_el.setAttribute('disabled', '')
+  			} else {
+    			tipo_etapa_el.removeAttribute('disabled');
+				tutor_etapa_el.setAttribute('disabled', '')
+  			}
+		})
 
             const responseEtapa  = await fetch('/select_etapa');
             const etapa = await responseEtapa.json();
