Cambios en el registro de empresa: put y delete

--- a/src/views/empresas.hbs
+++ b/src/views/empresas.hbs
@@ -1,8 +1,13 @@
-<h1>Listado de empresas</h1>
+<h1>Listado de Empresa existentes</h1>
 <ul>
-{{#each empresas as | Empresas |}}
+{{#each empresa as | Empresa |}}
 <li>
-    {{Empresas.name}} 
+    {{Empresa.name}} <a href="/mod_empresa/{{Empresa._id}}">Modificar</a> 
+        <form method="post">
+            <input type="hidden" name="_method" value="DELETE">
+            <input type="hidden" name="alumno" value="{{Empresa._id}}">
+            <input type="submit" value="borrar"></form>
 </li>
 {{/each}}
 </ul>
+
