--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -47,31 +47,39 @@
 					</a>
 					<ul class="list-unstyled full-box">
 						<li>
-							<a href="/ciclos"><i class="zmdi zmdi-book zmdi-hc-fw"></i>Ciclos</a>
+							<a href="/mod_ciclos"><i class="zmdi zmdi-book zmdi-hc-fw"></i>Modificacion de ciclos</a>
 						</li>
 						<li>
-							<a href="/mod_profesores"><i class="zmdi zmdi-book zmdi-hc-fw"></i>Modificacion de profesores</a>
+							<a href="/empresas"><i class="zmdi zmdi-book zmdi-hc-fw"></i>Modificacion de empresas</a>
 						</li>
 						<li>
-							<a href="/mod_estudiantes"><i class="zmdi zmdi-book zmdi-hc-fw"></i>Modificacion de Estudiantes</a>
+							<a href="/mod_festivos"><i class="zmdi zmdi-book zmdi-hc-fw"></i>Modificacion de Festivos</a>
 						</li>
 						<li>
-							<a href="calendario.html"><i class="zmdi zmdi-timer zmdi-hc-fw"></i>Calendario</a>
+							<a href="/mod_FCT"><i class="zmdi zmdi-font zmdi-hc-fw"></i>Modificacion de FCT</a>
+						</li>
+					</ul>
+				</li>
+				<li>
+				<li>
+					<a href="#!" class="btn-sideBar-SubMenu">
+						<i class="zmdi zmdi-case zmdi-hc-fw"></i>Datos de interes<i class="zmdi zmdi-caret-down pull-right"></i>
+					</a>
+					<ul class="list-unstyled full-box">
+						<li>
+							<a href="/calendario"><i class="zmdi zmdi-timer zmdi-hc-fw"></i>Calendario</a>
 						</li>
 						<li>
-							<a href="Horario.html"><i class="zmdi zmdi-timer zmdi-hc-fw"></i>Horario</a>
+							<a href="/horario"><i class="zmdi zmdi-timer zmdi-hc-fw"></i>Horario</a>
 						</li>
 						<li>
-							<a href="FCT.html"><i class="zmdi zmdi-font zmdi-hc-fw"></i>FCT</a>
-						</li>
-						<li>
-							<a href="notas.html"><i class="zmdi zmdi-font zmdi-hc-fw"></i>Notas</a>
+							<a href="/notas"><i class="zmdi zmdi-font zmdi-hc-fw"></i>Notas</a>
 						</li>
 					</ul>
 				</li>
 				<li>
 					<a href="#!" class="btn-sideBar-SubMenu">
-						<i class="zmdi zmdi-account-add zmdi-hc-fw"></i> Usuarios <i class="zmdi zmdi-caret-down pull-right"></i>
+						<i class="zmdi zmdi-account-add zmdi-hc-fw"></i> Conjunto Educativo <i class="zmdi zmdi-caret-down pull-right"></i>
 					</a>
 					<ul class="list-unstyled full-box">
 						<li>
@@ -131,12 +139,12 @@
 				</li>
 				<li>
 					
-					<a href="fuentezuelas.html" class="btn-sideBar-SubMenu">
-						<i class="zmdi zmdi-shield-security zmdi-hc-fw"></i> I.E.S LAS FUENTEZUELAS<i class="zmdi zmdi-caret-down pull-right"></i>
+					<a href="/documentos_profesorado" class="btn-sideBar-SubMenu">
+						<i class="zmdi zmdi-shield-security zmdi-hc-fw"></i>Documentos profesorado<i class="zmdi zmdi-caret-down pull-right"></i>
 					</a>
 					
 						<li>
-							<a href="autorizaciones.html"><i class="zmdi zmdi-balance zmdi-hc-fw"></i>Autorizaciones centro</a>
+							<a href="/autorizaciones"><i class="zmdi zmdi-balance zmdi-hc-fw"></i>Autorizaciones centro</a>
 						</li>
 					
 					</ul>
