--- a/src/views/mod_empresa.hbs
+++ b/src/views/mod_empresa.hbs
@@ -1,9 +1,9 @@
 <!-- Content pagina -->
 <div class="container-fluid">
   <div class="page-header">
-    <h1 class="text-titles"><i class="zmdi zmdi-money-box zmdi-hc-fw"></i>Registro<small>Empresa</small></h1>
+    <h1 class="text-titles"><i class="zmdi zmdi-money-box zmdi-hc-fw"></i>Modificacion<small> de Empresa</small></h1>
   </div>
-  <p class="lead">Rellenando el siguiente formulario podremos añadir al sistema una nueva Empresa. 
+  <p class="lead">Rellenando el siguiente formulario podremos modificar una Empresa. 
    Este proceso solo podrá realizarlo el administrador.</p>
 </div>
 <div class="container-fluid">
@@ -19,9 +19,10 @@
             <div class="row">
               <div class="col-xs-12 col-md-10 col-md-offset-1">
                 <form method="post">
+                     <input type="hidden" name="_method" value="PUT">
                   <div class="form-group label-floating">
                     <label class="control-label">Nombre o Razon social</label>
-                    <input class="form-control" name="name" type="text" id="name"  />
+                    <input class="form-control" name="name" type="text" id="name" value="{{empresa.name}}"  />
                   </div>
                   <div class="form-group label-floating">
                     <label class="control-label">Familia Profesional</label>
